# uvicorn-gunicorn-fastapi-docker

./: README.md  pyproject.toml
docker-images/: python3.11.dockerfile  requirements.txt
scripts/: build-push-all.sh  build-push.sh  build.sh  process_all.py  test-all.sh
tests/: utils.py
tests/test_01_main/: test_defaults.py
