[tool.poetry]
name = "uvicorn-gunicorn-fastapi-docker"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance FastAPI web applications in Python 3.7 and 3.6 with performance auto-tuning. Optionally with Alpine Linux."
authors = ["Jonathan Bereyziat <contact@bereyziat.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.0"
docker = "^6.0.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
autoflake = "^1.7.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
